--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="./normalize.css" rel="stylesheet" />
     <link href="./style.css" rel="stylesheet" />
     <title>QA-тестировщик Юлия Трегуб</title>
+    <p>QA Engineer</p>
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png.png">
   </head>
   <body>
@@ -14,6 +15,7 @@
       <img src="./avatar.png" alt="avatar" height="280px" class="header__avatar" />
       <h1 class="header__title">Юлия Трегуб</h1>
       <h3 class="header__subtitle">Все встречи не случайны</h3>
+      <p>QA Engineer!</p>
     </header>
     <main>
       <section class="links">
