--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+git<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,6 @@
     <link href="./normalize.css" rel="stylesheet" />
     <link href="./style.css" rel="stylesheet" />
     <title>QA-тестировщик Юлия Трегуб</title>
-    <p>QA Engineer</p>
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png.png">
   </head>
   <body>
@@ -15,7 +14,7 @@
       <img src="./avatar.png" alt="avatar" height="280px" class="header__avatar" />
       <h1 class="header__title">Юлия Трегуб</h1>
       <h3 class="header__subtitle">Все встречи не случайны</h3>
-      <p>QA Engineer!</p>
+      <p>QA Engineer!!</p>
     </header>
     <main>
       <section class="links">
